# serializer version: 1
# name: test_action_execute[None]
  'SELECT func1()'
# ---
# name: test_action_execute[execution_arguments1]
  'SELECT func1(arg1, arg2)'
# ---
# name: test_action_execute[execution_arguments2]
  'SELECT func1(foo, 42, bar)'
# ---
# name: test_function_get_execute_sql[None]
  'SELECT func1()'
# ---
# name: test_function_get_execute_sql[execution_arguments1]
  'SELECT func1(arg1, arg2)'
# ---
# name: test_function_get_execute_sql[execution_arguments2]
  'SELECT func1(foo, 42, bar)'
# ---
